--- a/app/views/homes/forth.html.erb
+++ b/app/views/homes/forth.html.erb
@@ -3,7 +3,15 @@
 <a href="/homes/index"> 돌아가기 </a> <br>
 
 <% @entry.each do |one| %>
-    <%= one.age %> <br>
+    id : <%= one.id %> <br>
+    age : <%= one.age %> <br>
+<a href="/homes/delete/<%= one.id %>">삭제하기</a> 
+<a href="/homes/edit/<%= one.id %>" target="_blank">수정하기</a> 
+<hr>
 <% end %>
 
-<%=@entry%>
+<hr> 
+<a href="/homes/delete_all">전부 삭제하기</a>
+
+
+<!--삭제하러갈 때 id값까지 가져가서 삭제하는 거임-->
